Logged api data to browser terminal by adding script tag

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -29,3 +29,4 @@
   </div>
 </div>
  <script type="text/javascript" src="js/signup.js"></script>
+ <script type="text/javascript" src="js/apiTest.js"></script>
