--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -21,7 +21,7 @@
           <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
           <span class="sr-only">Error:</span> <span class="msg"></span>
         </div>
-        <button type="submit" class="btn btn-default">Sign Up</button>
+        <button type="submit" class="bg-success btn btn-default">What is your price range </button>
       </form>
       <br />
       <p>Or log in <a href="/login">here</a></p>
