removed amazon csv, added OMG logo for background

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -8,6 +8,7 @@
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <h2>Login Form</h2>
+      <img src="../Assets/box-01.png" alt="ummmm">
       <form class="login">
         <div class="form-group">
           <label for="exampleInputEmail1">Email address</label>
