--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -12,6 +12,10 @@
     <div class="col-md-6 col-md-offset-3">
       <h2>Welcome <span class="member-name"></span></h2>
     </div>
+
+    <div>
+      <img src="Assets/hands-01.png" alt="hands">
+    </div>
   </div>
 </div>
 <script type="text/javascript" src="js/members.js"></script>
