--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -7,6 +7,18 @@
     </div>
   </div>
 </nav>
+{{!-- <div class="container">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <h2>Welcome <span class="member-name"></span></h2>
+    </div>
+
+    <div>
+      <img src="Assets/hands-01.png" alt="hands">
+    </div>
+  </div>
+</div> --}}
+
 <div class="container">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
@@ -18,4 +30,10 @@
     </div>
   </div>
 </div>
+
+
+
+
+
+
 <script type="text/javascript" src="js/members.js"></script>
