--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,27 +1,36 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
+{{!-- <nav class="navbar navbar-default">
+  <div class="container-fluid ">
+    <div class="navbar-header ">
     </div>
   </div>
-</nav>
+</nav> --}}
+
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4 text-center">Oh-My-Gift</h1>
+    <p class="lead text-center">A Procrastinator’s Guide to Super Last-Minute Gift Ideas (and Excuses)</p>
+  </div>
+</div>
 <div class="container">
   <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <h2>Oh My Gift!</h2>
-      <form class="signup">
-        <div class="form-group">
-        <button type="submit" class="btn btn-primary btn-lg btn-block">Who's your gift for?</button>
-        </div>
-        <div class="form-group">  
-        <button type="submit" class="btn btn-danger btn-lg btn-block">What category is your gift?</button> 
-        </div>
-        <div class="form-group">
-        <button type="submit" class="btn btn-success btn-lg btn-block">What price range is your gift?</button>
-        </div>      
-      </form>
-      <br />
-      <p>Or log in <a href="/login">here</a></p>
+    <div class="col-md-6 col-md-offset-3">     
+  
+  <ul id="contain" class="list-group list-group-flush">
+    <li class="list-group-item"><button id="btn" type="submit" class="btn btn-primary btn-block"><a id="a" href="/login">Who's your gift for?</a> </button></li>
+    <li class="list-group-item"><button id="btn" type="submit" class="btn btn-danger btn-block"> <a id="a" href="/login">What category is your gift?</a></button> </li>
+    <li class="list-group-item"><button id="btn" type="submit" class="btn btn-success btn-block"> <a id="a" href="/login">What price range is your gift?</a> </button></li>
+  </ul>
+
+
+       <img id="img1" src="https://lh5.googleusercontent.com/owlMhAnEAOn2PjDETJgOyL7ne8kRfpEZ3NjpYn1YlXqUSA-LzH0BWUASR_W4qWJ7m81e4IY9A4Lo1MoJ0N-iHMixPxux82-PVD3l9PHBfxSCpo34sAOv=w1280" alt="">
+
+
     </div>
   </div>
 </div>
  <script type="text/javascript" src="js/signup.js"></script>
+    
+    
+    
+    
+       {{!-- <img id="img" src="https://lh4.googleusercontent.com/lVT-WE2HjXBSbdxEDYLuMteiF_33tgMFjHWRhuaEBrcxeO_3CseLsBV3i83c9eASOUL2sotT5KDuiWEzLwR224HHcRKxVPtmA63394lCIArARqGOqCw=w1280" alt=""> --}}
