--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -7,8 +7,8 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      <h2>Login Form</h2>
-      <img src="../Assets/box-01.png" alt="ummmm">
+      <h2>Who is this gift for</h2>
+      
       <form class="login">
         <div class="form-group">
           <label for="exampleInputEmail1">Email address</label>
@@ -21,7 +21,7 @@
         <button type="submit" class="btn btn-default">Login</button>
       </form>
       <br />
-      <p>Or sign up <a href="/">here</a></p>
+      <p>Or sign up <a style="text-decoration: none;" href="/">here</a></p>
     </div>
   </div>
 </div>
