--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,13 +1,13 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-    </div>
+<div class="jumbotron jumbotron-fluid bg-danger">
+  <div class="container">
+    <h1 class="display-4 text-center">Who is your gift for?</h1>
+   
   </div>
-</nav>
+</div>
 <div class="container">
   <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <h2>Who is this gift for</h2>
+    <div class="col-md-6 col-md-offset-3"> 
+      {{!-- <h2>Who is this gift for</h2>
       
       <form class="login">
         <div class="form-group">
@@ -21,8 +21,42 @@
         <button type="submit" class="btn btn-default">Login</button>
       </form>
       <br />
-      <p>Or sign up <a style="text-decoration: none;" href="/">here</a></p>
+      <p>Or sign up <a style="text-decoration: none;" href="/">here</a></p> --}}
+<div class="container">
+<div class="card">
+  <div class="card-header bg-primary">
+    <h2>Who is this gift for</h2>
+  </div>
+  <div class="card-body">
+    <div class="container">
+  <div class="row">
+    <div class="col">
+      1 of 2
+    </div>
+    <div class="col">
+      2 of 2
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      1 of 3
+    </div>
+    <div class="col">
+      2 of 3
+    </div>
+    <div class="col">
+      3 of 3
     </div>
   </div>
 </div>
+</div>
+</div>
+</div>
+
+
+
+
+    {{!-- </div>
+  </div>
+</div> --}}
 <script type="text/javascript" src="js/login.js"></script>
