republised logo, as well as created handlebar files

--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -1,6 +1,6 @@
 <div class="jumbotron jumbotron-fluid bg-danger">
   <div class="container">
-    <h1 class="display-4 text-center">Who is your gift for?</h1>
+    <h1 class="display-4 text-center">What category is your gift?</h1>
 
   </div>
 </div>
