removed restrictions on the logo so that it may be viewed by all

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -16,7 +16,7 @@
   </ul>
 
 
-       <img id="img1" src="https://lh6.googleusercontent.com/paDDoy0kwEhnLq1DF1lnudCF2nz3gTqrBmoSM94hJv6Epiaro3un6_ISLdKYTFzhZ5wuplWhe3-ZA5TDFzEOlH2y3qPl6bgGJ8N14l3Zo5By0GhRENM9=w1280" alt="">
+       <img id="img1" src="https://lh4.googleusercontent.com/9YVOEY-vhNYNqJS-wl791wCavjEtDD4xbWrE2davmBTDHP_ambGUB0ZLMhn0RVWg5GaHQ6UYKP6v0-SfIPFtG1OtYo7f_hT-ria2X9dHQShSroggxFCz=w1280" alt="Gift-box">
 
 
 
