--- a/views/price.handlebars
+++ b/views/price.handlebars
@@ -13,19 +13,19 @@
           <div class="card-body">
               <div class="row">
                 <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">$5 - $10</a></button>
+                  <button type="submit" class="btn btn-success btn-block"> <a id="a" href="#">$5 - $10</a></button>
                 </div>
 
                 <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">$10 - $20</a></button>
+                  <button type="submit" class="btn btn-success btn-block"> <a id="a" href="#">$10 - $20</a></button>
                 </div>
               </div>
               <div class="row">
                 <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">$20 - $30</a></button>
+                  <button type="submit" class="btn btn-success btn-block"> <a id="a" href="#">$20 - $30</a></button>
                 </div>
                 <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">SURPRISE ME</a></button>
+                  <button type="submit" class="btn btn-success btn-block"> <a id="a" href="#">SURPRISE ME</a></button>
                 </div>
                 <div class="col col-md-6 col-md-offset-3">
                   <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Brother</a></button>
