--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -8,41 +8,27 @@
   <div class="col">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      {{!-- <h2>Who is this gift for</h2>
-
-      <form class="login">
-        <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
-          <input type="email" class="form-control" id="email-input" placeholder="Email">
-        </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1">Password</label>
-          <input type="password" class="form-control" id="password-input" placeholder="Password">
-        </div>
-        <button type="submit" class="btn btn-default">Login</button>
-      </form>
-      <br />
-      <p>Or sign up <a style="text-decoration: none;" href="/">here</a></p> --}}
+      
         <div class="card">
           <div class="card-body">
               <div class="row">
                 <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Grandpa</a></button>
+                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Clothes</a></button>
                 </div>
 
                 <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Husband</a></button>
+                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Jewerly</a></button>
                 </div>
               </div>
               <div class="row">
                 <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Father</a></button>
+                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Electronics</a></button>
                 </div>
                 <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Son</a></button>
+                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Toys</a></button>
                 </div>
                 <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Brother</a></button>
+                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Books</a></button>
                   <button><a style="text-decoration: none;" href="/">NVM</a></button>
                 </div>
               </div>
@@ -58,24 +44,19 @@
           <div class="card-body">
               <div class="row">
                 <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Grandma</a></button>
+                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Health</a></button>
                 </div>
 
                 <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Wife</a></button>
+                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Entertainment</a></button>
                 </div>
               </div>
               <div class="row">
                 <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Mother</a></button>
+                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Random</a></button>
                 </div>
-                <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Daughter</a></button>
-                </div>
-                <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Sister</a></button>
+                
                   <button><a style="text-decoration: none;" href="/">NVM</a></button>
-                </div>
               </div>
             </div>
         </div>
