--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -17,7 +17,7 @@
                 </div>
 
                 <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Jewerly</a></button>
+                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Jewelery</a></button>
                 </div>
               </div>
               <div class="row">
@@ -64,4 +64,4 @@
   </div>
 </div>
 </div>
-<script type="text/javascript" src="js/login.js"></script>
+<script type="text/javascript" src="js/category.js"></script>
