--- a/views/price.handlebars
+++ b/views/price.handlebars
@@ -39,4 +39,4 @@
 </div>
 </div>
 
-<script type="text/javascript" src="js/login.js"></script>
+<script type="text/javascript" src="js/price.js"></script>
