Category and price pages are now showing properly

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -11,8 +11,8 @@
   
   <ul id="contain" class="list-group list-group-flush">
     <li class="list-group-item"><button id="btn" type="submit" class="btn btn-primary btn-block"><a id="a" href="/login">Who's your gift for?</a> </button></li>
-    <li class="list-group-item"><button id="btn" type="submit" class="btn btn-danger btn-block"> <a id="a" href="/login">What category is your gift?</a></button> </li>
-    <li class="list-group-item"><button id="btn" type="submit" class="btn btn-success btn-block"> <a id="a" href="/login">What price range is your gift?</a> </button></li>
+    <li class="list-group-item"><button id="btn" type="submit" class="btn btn-danger btn-block"> <a id="a" href="/category">What category is your gift?</a></button> </li>
+    <li class="list-group-item"><button id="btn" type="submit" class="btn btn-success btn-block"> <a id="a" href="/price">What price range is your gift?</a> </button></li>
   </ul>
 
 
