Styled category page buttons and updated bootstrap link.

--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -1,67 +1,39 @@
-<div class="jumbotron jumbotron-fluid bg-danger">
+<div class="jumbotron jumbotron-fluid bg-light">
   <div class="container">
     <h1 class="display-4 text-center">What category is your gift?</h1>
 
   </div>
 </div>
-<div class="container">
-  <div class="col">
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      
-        <div class="card">
-          <div class="card-body">
-              <div class="row">
-                <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Clothes</a></button>
-                </div>
 
-                <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Jewelery</a></button>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Electronics</a></button>
-                </div>
-                <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Toys</a></button>
-                </div>
-                <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Books</a></button>
-                  <button><a style="text-decoration: none;" href="/">NVM</a></button>
-                </div>
-              </div>
-            </div>
-        </div>
+{{!-- CONTAINER
+--}}
+<section class="container">
+
+  <div class="row">
+    <div class="col col-md-6 col-md-offset-3">
+      <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Clothes</a></button>
+      <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Jewelery</a></button>
+      <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Electronics</a></button>
+      <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Toys</a></button>
+    </div>
+
+
+
+    <div class="col col-md-6 col-md-offset-3">
+      <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Health</a></button>
+      <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Entertainment</a></button>
+      <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Books</a></button>
     </div>
   </div>
-</div>
-<div class="col">
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-        <div class="card">
-          <div class="card-body">
-              <div class="row">
-                <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Health</a></button>
-                </div>
 
-                <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Entertainment</a></button>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Random</a></button>
-                </div>
-                
-                  <button><a style="text-decoration: none;" href="/">NVM</a></button>
-              </div>
-            </div>
-        </div>
-    </div>
+<br>
+  <div class="row justify-content-center">
+  <div class="col-4">
+    <button style="margin-top: 30px;" class="btn btn-success btn-block"><a style="color: white;" href="/">Return to Main Menu</a></button>
   </div>
 </div>
-</div>
+</section> <!-- END OF CONTAINER -->
+
+
+
 <script type="text/javascript" src="js/category.js"></script>
