Deleted extra buttons, stylized and refactored login page, organized buttons

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,28 +1,14 @@
-<div class="jumbotron jumbotron-fluid bg-danger">
+<div class="jumbotron jumbotron-fluid bg-light">
   <div class="container">
     <h1 class="display-4 text-center">Who is your gift for?</h1>
 
   </div>
 </div>
-<div class="container">
+{{!-- <div class="container">
   <div class="col">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      {{!-- <h2>Who is this gift for</h2>
-
-      <form class="login">
-        <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
-          <input type="email" class="form-control" id="email-input" placeholder="Email">
-        </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1">Password</label>
-          <input type="password" class="form-control" id="password-input" placeholder="Password">
-        </div>
-        <button type="submit" class="btn btn-default">Login</button>
-      </form>
-      <br />
-      <p>Or sign up <a style="text-decoration: none;" href="/">here</a></p> --}}
+     
         <div class="card">
           <div class="card-body">
               <div class="row">
@@ -82,5 +68,34 @@
     </div>
   </div>
 </div>
-</div>
+</div> --}}
+<section class="container">
+  <div class="row">
+    <div class="col col-md-6 col-md-offset-3">
+      <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Grandpa</a></button>
+      <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Father</a></button>
+      <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Husband</a></button>
+      <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Son</a></button>
+      <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Brother</a></button>
+
+    </div>
+
+    <div class="col col-sm-6 col-md-offset-3">
+
+      <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Grandma</a></button>
+      <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Mother</a></button>
+      <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Daughter</a></button>
+      <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Wife</a></button>
+      <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Sister</a></button>
+    </div>
+    <br>
+  </div>
+  <div class="row justify-content-center">
+    <div class="col-4">
+      <button style="margin-top: 50px;" class="btn btn-success btn-block"><a style="color: white;" href="/">Return to
+          Main Menu</a></button>
+    </div>
+  </div>
+</section>
+
 <script type="text/javascript" src="js/login.js"></script>
