Added justify content center to line 9 in signup.handlebars.

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -6,7 +6,7 @@
   </div>
 </div>
 <div class="container">
-  <div class="row">
+  <div class="row justify-content-center">
     <div class="col-md-6 col-md-offset-3">     
   
   <ul id="contain" class="list-group list-group-flush">
