--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -13,22 +13,22 @@
           <div class="card-body">
               <div class="row">
                 <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Clothes</a></button>
+                  <button type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Clothes</a></button>
                 </div>
 
                 <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Jewelery</a></button>
+                  <button type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Jewelery</a></button>
                 </div>
               </div>
               <div class="row">
                 <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Electronics</a></button>
+                  <button type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Electronics</a></button>
                 </div>
                 <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Toys</a></button>
+                  <button type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Toys</a></button>
                 </div>
                 <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Books</a></button>
+                  <button type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Books</a></button>
                   <button><a style="text-decoration: none;" href="/">NVM</a></button>
                 </div>
               </div>
@@ -44,16 +44,16 @@
           <div class="card-body">
               <div class="row">
                 <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Health</a></button>
+                  <button type="button" class="btn btn-danger btn-block health"> <a id="a" href="#">Health</a></button>
                 </div>
 
                 <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Entertainment</a></button>
+                  <button type="button" class="btn btn-danger btn-block"> <a id="a" href="#">Entertainment</a></button>
                 </div>
               </div>
               <div class="row">
                 <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Random</a></button>
+                  <button type="button" class="btn btn-danger btn-block"> <a id="a" href="#">Random</a></button>
                 </div>
                 
                   <button><a style="text-decoration: none;" href="/">NVM</a></button>
@@ -65,3 +65,4 @@
 </div>
 </div>
 <script type="text/javascript" src="js/category.js"></script>
+<script type="text/javascript" src="js/omg.js"></script>
