updated price page to have only one column for the prices, changed color buttons on all three pages

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -92,7 +92,7 @@
   </div>
   <div class="row justify-content-center">
     <div class="col-4">
-      <button style="margin-top: 50px;" class="btn btn-success btn-block"><a style="color: white;" href="/">Return to
+      <button style="margin-top: 50px;" class="btn btn-warning btn-block"><a style="color: white;" href="/">Return to
           Main Menu</a></button>
     </div>
   </div>
