--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -11,25 +11,25 @@
 
   <div class="row">
     <div class="col col-md-6 col-md-offset-3">
-      <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Clothes</a></button>
-      <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Jewelery</a></button>
-      <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Electronics</a></button>
-      <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Toys</a></button>
+      <button type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Clothes</a></button>
+      <button type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Jewelery</a></button>
+      <button type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Electronics</a></button>
+      <button type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Toys</a></button>
     </div>
 
 
 
     <div class="col col-md-6 col-md-offset-3">
-      <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Health</a></button>
-      <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Entertainment</a></button>
-      <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Books</a></button>
+      <button type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Health</a></button>
+      <button type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Entertainment</a></button>
+      <button type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Books</a></button>
     </div>
   </div>
 
 <br>
   <div class="row justify-content-center">
   <div class="col-4">
-    <button style="margin-top: 30px;" class="btn btn-success btn-block"><a style="color: white;" href="/">Return to Main Menu</a></button>
+    <button style="margin-top: 30px;" class="btn btn-warning btn-block"><a style="color: white;" href="/">Return to Main Menu</a></button>
   </div>
 </div>
 </section> <!-- END OF CONTAINER -->
