--- a/views/price.handlebars
+++ b/views/price.handlebars
@@ -9,18 +9,18 @@
     <div class="col col-md-6 col-md-offset-3">
       <button type="submit" class="btn btn-success btn-block"> <a id="a" href="#">$5 - $10</a></button>
       <button type="submit" class="btn btn-success btn-block"> <a id="a" href="#">$10 - $20</a></button>
-      <br>
-    </div>
-    <div class="col col-md-6 col-md-offset-3">
+      
+    {{!-- <div class="col col-md-6 col-md-offset-3"> --}}
       <button type="submit" class="btn btn-success btn-block"> <a id="a" href="#">$20 - $30</a></button>
       <button type="submit" class="btn btn-success btn-block"> <a id="a" href="#">SURPRISE ME</a></button>
       <br>
+      </div>
     </div>
   </div>
-  
+
   <div class="row justify-content-center">
     <div class="col-4">
-      <button style="margin-top: 50px;" class="btn btn-primary btn-block"><a style="color: white;" href="/">Return to
+      <button style="margin-top: 50px;" class="btn btn-warning btn-block"><a style="color: white;" href="/">Return to
           Main Menu</a></button>
     </div>
   </div>
