--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -1,4 +1,4 @@
-<div class="jumbotron jumbotron-fluid bg-light">
+<div class="jumbotron jumbotron-fluid bg-danger text-white">
   <div class="container">
     <h1 class="display-4 text-center">What category is your gift?</h1>
 
