--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<div class="jumbotron jumbotron-fluid bg-light">
+<div class="jumbotron jumbotron-fluid bg-primary text-white">
   <div class="container">
     <h1 class="display-4 text-center">Who is your gift for?</h1>
 
