--- a/views/price.handlebars
+++ b/views/price.handlebars
@@ -1,4 +1,4 @@
-<div class="jumbotron jumbotron-fluid bg-light">
+<div class="jumbotron jumbotron-fluid bg-success text-white">
   <div class="container">
     <h1 class="display-4 text-center">What price range is your gift?</h1>
 
