--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,10 @@
-#contain{
+/* #contain{
   margin-top: 25px;
-}
-
-/* .jumbotron {
-  padding: 0.5em 0.6em;
 } */
+
+.jumbotron {
+  padding: 0.5em 0.6em;
+}
 
 h2{
   font-size: 50px;
@@ -23,12 +23,12 @@ h2{
 }
 
 img{
-  position: center center;
+  position: center;
 }
 
 #img1 {
   animation: omgBox 4s;
-  height: 100%;
+  height: 75%;
   width: 100%;
   margin: auto;
   display: block 
@@ -42,6 +42,25 @@ img{
   50% {
       transform: translate3d(0px, 50px, 0px);
       opacity: 100%;
+  }
+  100% {
+      transform: translate3d(0px, 0px, 0px);
+      opacity: 100%;
+  }
+}
+
+#options {
+  animation: options 5s;
+}
+
+@keyframes options {
+  0% {
+      transform: translate3d(0px, 150px, 0px);
+      opacity: 0%;
+  }
+  50% {
+      transform: translate3d(0px, 50px, 0px);
+      opacity: 0%;
   }
   100% {
       transform: translate3d(0px, 0px, 0px);
