--- a/views/price.handlebars
+++ b/views/price.handlebars
@@ -5,7 +5,7 @@
   </div>
 </div>
 <div class="container">
-  <div class="row">
+  <div class="row justify-content-center">
     <div class="col col-md-6 col-md-offset-3">
       <button type="submit" class="btn btn-success btn-block"> <a id="a" href="#">$5 - $10</a></button>
       <button type="submit" class="btn btn-success btn-block"> <a id="a" href="#">$10 - $20</a></button>
