--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -1,7 +1,8 @@
 <div class="jumbotron jumbotron-fluid bg-danger text-white">
   <div class="container">
+    <br>
     <h1 class="display-4 text-center">What category is your gift?</h1>
-
+<br>
   </div>
 </div>
 
@@ -30,6 +31,8 @@
   <div class="row justify-content-center">
   <div class="col-4">
     <button style="margin-top: 30px;" class="btn btn-warning btn-block"><a style="color: white;" href="/">Return to Main Menu</a></button>
+     <button style="margin-top: 50px;" class="btn btn-primary btn-block"><a style="color: white;" href="/login">Select a Person</a></button>
+          <button style="margin-top: 50px;" class="btn btn-success btn-block"><a style="color: white;" href="/price">Select a Price</a></button>
   </div>
 </div>
 </section> <!-- END OF CONTAINER -->
