--- a/views/price.handlebars
+++ b/views/price.handlebars
@@ -1,7 +1,8 @@
 <div class="jumbotron jumbotron-fluid bg-success text-white">
   <div class="container">
+    <br>
     <h1 class="display-4 text-center">What price range is your gift?</h1>
-
+<br>
   </div>
 </div>
 <div class="container">
@@ -22,6 +23,8 @@
     <div class="col-4">
       <button style="margin-top: 50px;" class="btn btn-warning btn-block"><a style="color: white;" href="/">Return to
           Main Menu</a></button>
+           <button style="margin-top: 50px;" class="btn btn-primary btn-block"><a style="color: white;" href="/login">Select a Person</a></button>
+          <button style="margin-top: 50px;" class="btn btn-danger btn-block"><a style="color: white;" href="/category">Select a Category</a></button>
     </div>
   </div>
 
