bring buttons closer together and added additional button to categories

--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -24,16 +24,19 @@
       <button type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Health</a></button>
       <button type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Entertainment</a></button>
       <button type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Books</a></button>
+      <button type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Pick For Me</a></button>
     </div>
   </div>
 
 <br>
+<div class= "container">
   <div class="row justify-content-center">
   <div class="col-4">
     <button style="margin-top: 30px;" class="btn btn-warning btn-block"><a style="color: white;" href="/">Return to Main Menu</a></button>
-     <button style="margin-top: 50px;" class="btn btn-primary btn-block"><a style="color: white;" href="/login">Select a Person</a></button>
-          <button style="margin-top: 50px;" class="btn btn-success btn-block"><a style="color: white;" href="/price">Select a Price</a></button>
+     <button style="margin-top: 20px;" class="btn btn-primary btn-block"><a style="color: white;" href="/login">Select a Person</a></button>
+          <button id="redirectBtn" class="btn btn-success btn-block"><a style="color: white;" href="/price">Select a Price</a></button>
   </div>
+  </div> 
 </div>
 </section> <!-- END OF CONTAINER -->
 
