--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -92,12 +92,13 @@
     </div>
     <br>
   </div>
+  <div class="container">
   <div class="row justify-content-center">
     <div class="col-4">
       <button style="margin-top: 50px;" class="btn btn-warning btn-block"><a style="color: white;" href="/">Return to
           Main Menu</a></button>
-          <button style="margin-top: 50px;" class="btn btn-danger btn-block"><a style="color: white;" href="/category">Select a Category</a></button>
-          <button style="margin-top: 50px;" class="btn btn-success btn-block"><a style="color: white;" href="/price">Select a Price</a></button>
+          <button style="margin-top: 20px;" class="btn btn-danger btn-block"><a style="color: white;" href="/category">Select a Category</a></button>
+          <button style="margin-top: 20px;" class="btn btn-success btn-block"><a style="color: white;" href="/price">Select a Price</a></button>
 
 
 
@@ -105,6 +106,7 @@
 
 
     </div>
+  </div>
   </div>
 </section>
 
