Added button click for all three pages that logs the id of the specific button pressed | broke the return to main menu btn

--- a/views/price.handlebars
+++ b/views/price.handlebars
@@ -7,13 +7,13 @@
 <div class="container">
   <div class="row">
     <div class="col col-md-6 col-md-offset-3">
-      <button type="submit" class="btn btn-success btn-block"> <a id="a" href="#">$5 - $10</a></button>
-      <button type="submit" class="btn btn-success btn-block"> <a id="a" href="#">$10 - $20</a></button>
+      <button id="$5 - $10" type="submit" class="btn btn-success btn-block"> <a id="a" href="#">$5 - $10</a></button>
+      <button id="$10 - $20" type="submit" class="btn btn-success btn-block"> <a id="a" href="#">$10 - $20</a></button>
       <br>
     </div>
     <div class="col col-md-6 col-md-offset-3">
-      <button type="submit" class="btn btn-success btn-block"> <a id="a" href="#">$20 - $30</a></button>
-      <button type="submit" class="btn btn-success btn-block"> <a id="a" href="#">SURPRISE ME</a></button>
+      <button id="$20 - $30" type="submit" class="btn btn-success btn-block"> <a id="a" href="#">$20 - $30</a></button>
+      <button id="$SURPRISE ME" type="submit" class="btn btn-success btn-block"> <a id="a" href="#">SURPRISE ME</a></button>
       <br>
     </div>
   </div>
