--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -13,10 +13,10 @@
   <div class="row">
     <div class="col col-md-6 col-md-offset-3">
 
-      <button id="clothes" type="button" class="btn btn-primary btn-block"> <a id="a" href="#">Clothes</a></button>
-      <button id="jewelery" type="button" class="btn btn-primary btn-block"> <a id="a" href="#">Jewelery</a></button>
-      <button id="electronics" type="button" class="btn btn-primary btn-block"> <a id="a" href="#">Electronics</a></button>
-      <button id="toys" type="button" class="btn btn-primary btn-block"> <a id="a" href="#">Toys</a></button>
+      <button id="clothes" type="button" class="btn btn-danger btn-block"> <a id="a" href="#">Clothes</a></button>
+      <button id="jewelery" type="button" class="btn btn-danger btn-block"> <a id="a" href="#">Jewelery</a></button>
+      <button id="electronics" type="button" class="btn btn-danger btn-block"> <a id="a" href="#">Electronics</a></button>
+      <button id="toys" type="button" class="btn btn-danger btn-block"> <a id="a" href="#">Toys</a></button>
 
     </div>
 
@@ -24,9 +24,10 @@
 
     <div class="col col-md-6 col-md-offset-3">
 
-      <button id="health" type="button" class="btn btn-primary btn-block"> <a id="a" href="#">Health</a></button>
-      <button id="entertainment" type="button" class="btn btn-primary btn-block"> <a id="a" href="#">Entertainment</a></button>
-      <button id="books" type="button" class="btn btn-primary btn-block"> <a id="a" href="#">Books</a></button>
+      <button id="health" type="button" class="btn btn-danger btn-block"> <a id="a" href="#">Health</a></button>
+      <button id="entertainment" type="button" class="btn btn-danger btn-block"> <a id="a" href="#">Entertainment</a></button>
+      <button id="books" type="button" class="btn btn-danger btn-block"> <a id="a" href="#">Books</a></button>
+      <button id="Pickforme" type="button" class="btn btn-danger btn-block"> <a id="a" href="#">Pick For Me</a></button>
 
     </div>
   </div>
