--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -12,19 +12,19 @@
 
   <div class="row">
     <div class="col col-md-6 col-md-offset-3">
-      <button type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Clothes</a></button>
-      <button type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Jewelery</a></button>
-      <button type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Electronics</a></button>
-      <button type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Toys</a></button>
+      <button id="Clothes" type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Clothes</a></button>
+      <button id="Jewelery" type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Jewelery</a></button>
+      <button id="Electronics" type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Electronics</a></button>
+      <button id="Toys" type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Toys</a></button>
     </div>
 
 
 
     <div class="col col-md-6 col-md-offset-3">
-      <button type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Health</a></button>
-      <button type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Entertainment</a></button>
-      <button type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Books</a></button>
-      <button type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Pick For Me</a></button>
+      <button id="Health" type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Health</a></button>
+      <button id="Entertainment" type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Entertainment</a></button>
+      <button id="Books" type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Books</a></button>
+      <button id="Pick For Me" type="submit" class="btn btn-danger btn-block"> <a id="a" href="#">Pick For Me</a></button>
     </div>
   </div>
 
