changed size of redirect buttons on all three pages

--- a/views/price.handlebars
+++ b/views/price.handlebars
@@ -8,19 +8,19 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col col-md-6 col-md-offset-3">
-      <button id="$5 - $10" type="submit" class="btn btn-success btn-block"> <a id="a" href="#">$5 - $10</a></button>
-      <button id="$10 - $20" type="submit" class="btn btn-success btn-block"> <a id="a" href="#">$10 - $20</a></button>
+      <button type="submit" class="btn btn-success btn-block"> <a id="a" href="#">$5 - $10</a></button>
+      <button type="submit" class="btn btn-success btn-block"> <a id="a" href="#">$10 - $20</a></button>
       
     {{!-- <div class="col col-md-6 col-md-offset-3"> --}}
-      <button id="$20 - $30" type="submit" class="btn btn-success btn-block"> <a id="a" href="#">$20 - $30</a></button>
-      <button id="SURPRISE ME" type="submit" class="btn btn-success btn-block"> <a id="a" href="#">SURPRISE ME</a></button>
+      <button type="submit" class="btn btn-success btn-block"> <a id="a" href="#">$20 - $30</a></button>
+      <button type="submit" class="btn btn-success btn-block"> <a id="a" href="#">SURPRISE ME</a></button>
       <br>
       </div>
     </div>
   </div>
 
   <div class="row justify-content-center">
-    <div class="col-4">
+    <div class="col-3">
       <button style="margin-top: 50px;" class="btn btn-warning btn-block"><a style="color: white;" href="/">Return to
           Main Menu</a></button>
            <button style="margin-top: 20px;" class="btn btn-primary btn-block"><a style="color: white;" href="/login">Select a Person</a></button>
