image folder created and placed in under the public folder

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -19,8 +19,9 @@
 
 
 
-       <img id="img1" src="https://lh3.googleusercontent.com/ZIP_I1fs9_rLH8_5BdkgZ4JeCLrpBfO_O-zfq-Id7LDLzs7eQz2gVi4RayuYd6uYRCiDXu5vIHnwL_8Jc1ij5buHkmfvhBv-5-o0BkoBFCnriFlB7tFg=w1280" alt="Gift-box">
+       {{!-- <img id="img1" src="https://lh3.googleusercontent.com/ZIP_I1fs9_rLH8_5BdkgZ4JeCLrpBfO_O-zfq-Id7LDLzs7eQz2gVi4RayuYd6uYRCiDXu5vIHnwL_8Jc1ij5buHkmfvhBv-5-o0BkoBFCnriFlB7tFg=w1280" alt="Gift-box"> --}}
 
+<img id="img1" src="./images/oh-my-gift-box.png" alt="Gift-box">
 
 
 
