Changed all buttons from id=a to class=link

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -12,9 +12,9 @@
     <div class="col-md-6 col-md-offset-3">     
   
   <ul id="options" class="list-group list-group-flush">
-    <li class="list-group-item"><button id="btn" type="submit" class="btn btn-primary btn-block"><a id="a" href="/login">Who's your gift for?</a> </button></li>
-    <li class="list-group-item"><button id="btn" type="submit" class="btn btn-danger btn-block"> <a id="a" href="/category">What category is your gift?</a></button> </li>
-    <li class="list-group-item"><button id="btn" type="submit" class="btn btn-success btn-block"> <a id="a" href="/price">What price range is your gift?</a> </button></li>
+    <li class="list-group-item"><button id="btn" type="submit" class="btn btn-primary btn-block"><a class="link" href="/login">Who's your gift for?</a> </button></li>
+    <li class="list-group-item"><button id="btn" type="submit" class="btn btn-danger btn-block"> <a class="link" href="/category">What category is your gift?</a></button> </li>
+    <li class="list-group-item"><button id="btn" type="submit" class="btn btn-success btn-block"> <a class="link" href="/price">What price range is your gift?</a> </button></li>
   </ul>
 
 
