--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -74,21 +74,21 @@
 <section class="container">
   <div class="row">
     <div class="col col-md-6 col-md-offset-3">
-      <button id="Grandpa" type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Grandpa</a></button>
-      <button id="Father" type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Father</a></button>
-      <button id="Husband" type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Husband</a></button>
-      <button id="Son" type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Son</a></button>
-      <button id="Brother" type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Brother</a></button>
+      <button id="Grandpa" type="submit" class="btn btn-primary btn-block"> <a class="link" href="#">Grandpa</a></button>
+      <button id="Father" type="submit" class="btn btn-primary btn-block"> <a class="link" href="#">Father</a></button>
+      <button id="Husband" type="submit" class="btn btn-primary btn-block"> <a class="link" href="#">Husband</a></button>
+      <button id="Son" type="submit" class="btn btn-primary btn-block"> <a class="link" href="#">Son</a></button>
+      <button id="Brother" type="submit" class="btn btn-primary btn-block"> <a class="link" href="#">Brother</a></button>
 
     </div>
 
     <div class="col col-sm-6 col-md-offset-3">
 
-      <button id="Grandma" type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Grandma</a></button>
-      <button id="Mother" type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Mother</a></button>
-      <button id="Daughter" type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Daughter</a></button>
-      <button id="Wife" type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Wife</a></button>
-      <button id="Sister" type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Sister</a></button>
+      <button id="Grandma" type="submit" class="btn btn-primary btn-block"> <a class="link" href="#">Grandma</a></button>
+      <button id="Mother" type="submit" class="btn btn-primary btn-block"> <a class="link" href="#">Mother</a></button>
+      <button id="Daughter" type="submit" class="btn btn-primary btn-block"> <a class="link" href="#">Daughter</a></button>
+      <button id="Wife" type="submit" class="btn btn-primary btn-block"> <a class="link" href="#">Wife</a></button>
+      <button id="Sister" type="submit" class="btn btn-primary btn-block"> <a class="link" href="#">Sister</a></button>
     </div>
     <br>
   </div>
