--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,73 +6,9 @@
 
   </div>
 </div>
-{{!-- <div class="container">
-  <div class="col">
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-     
-        <div class="card">
-          <div class="card-body">
-              <div class="row">
-                <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Grandpa</a></button>
-                </div>
 
-                <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Husband</a></button>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Father</a></button>
-                </div>
-                <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Son</a></button>
-                </div>
-                <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Brother</a></button>
-                  <button><a style="text-decoration: none;" href="/">NVM</a></button>
-                </div>
-              </div>
-            </div>
-        </div>
-    </div>
-  </div>
-</div>
-<div class="col">
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-        <div class="card">
-          <div class="card-body">
-              <div class="row">
-                <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Grandma</a></button>
-                </div>
-
-                <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Wife</a></button>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Mother</a></button>
-                </div>
-                <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Daughter</a></button>
-                </div>
-                <div class="col col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Sister</a></button>
-                  <button><a style="text-decoration: none;" href="/">NVM</a></button>
-                </div>
-              </div>
-            </div>
-        </div>
-    </div>
-  </div>
-</div>
-</div> --}}
 <section class="container">
-  <div class="row">
+  <div id="categoryBtns" class="row">
     <div class="col col-md-6 col-md-offset-3">
       <button id="Grandpa" type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Grandpa</a></button>
       <button id="Father" type="submit" class="btn btn-primary btn-block"> <a id="a" href="#">Father</a></button>
