--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,7 +23,19 @@ h1{
   font-size: 25px; 
   height: 50%; 
   width: 100%;
+  font-family: 'Josefin Sans', sans-serif;
 }
+
+#a {
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: 20px;
+}
+
+#categoryBtns {
+  font-family: 'Josefin Sans', sans-serif; 
+  font-size: 20px;
+}
+
 #redirectBtn {
   margin-top: 20px;
 }
