Added price parameter to api get request

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,8 +17,7 @@
 <body>
     {{{body}}}
 
-
-{{!-- <script src="js/omg.js"></script> --}}
+{{!-- <script type="text/javascript" src="js/category.js"></script> --}}
 </body>
 
 </html>
