--- a/views/price.handlebars
+++ b/views/price.handlebars
@@ -8,12 +8,12 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col col-md-6 col-md-offset-3">
-      <button type="submit" class="btn btn-success btn-block"> <a id="a" href="#">$5 - $10</a></button>
-      <button type="submit" class="btn btn-success btn-block"> <a id="a" href="#">$10 - $20</a></button>
+      <button type="submit" class="btn btn-success btn-block price"> <a id="a" href="#">$5 - $10</a></button>
+      <button type="submit" class="btn btn-success btn-block price"> <a id="a" href="#">$10 - $20</a></button>
       
     {{!-- <div class="col col-md-6 col-md-offset-3"> --}}
-      <button type="submit" class="btn btn-success btn-block"> <a id="a" href="#">$20 - $30</a></button>
-      <button type="submit" class="btn btn-success btn-block"> <a id="a" href="#">SURPRISE ME</a></button>
+      <button type="submit" class="btn btn-success btn-block price"> <a id="a" href="#">$20 - $30</a></button>
+      <button type="submit" class="btn btn-success btn-block price"> <a id="a" href="#">SURPRISE ME</a></button>
       <br>
       </div>
     </div>
@@ -28,4 +28,5 @@
     </div>
   </div>
 
-  <script type="text/javascript" src="js/price.js"></script>
+
+ <script type="text/javascript" src="js/category.js"></script>
