--- a/views/price.handlebars
+++ b/views/price.handlebars
@@ -9,12 +9,12 @@
   <div class="row justify-content-center">
     <div class="col col-md-6 col-md-offset-3">
 
-      <button type="submit" class="btn btn-success btn-block"> <a class="link" href="#">$5 - $10</a></button>
-      <button type="submit" class="btn btn-success btn-block"> <a class="link" href="#">$10 - $20</a></button>
+      <button type="submit" class="btn btn-success btn-block price"> <a class="link" href="#">$5 - $10</a></button>
+      <button type="submit" class="btn btn-success btn-block price"> <a class="link" href="#">$10 - $20</a></button>
       
     {{!-- <div class="col col-md-6 col-md-offset-3"> --}}
-      <button type="submit" class="btn btn-success btn-block"> <a class="link" href="#">$20 - $30</a></button>
-      <button type="submit" class="btn btn-success btn-block"> <a class="link" href="#">SURPRISE ME</a></button>
+      <button type="submit" class="btn btn-success btn-block price"> <a class="link" href="#">$20 - $30</a></button>
+      <button type="submit" class="btn btn-success btn-block price"> <a class="link" href="#">SURPRISE ME</a></button>
 
       <br>
       </div>
