--- a/views/price.handlebars
+++ b/views/price.handlebars
@@ -21,7 +21,7 @@
     </div>
   </div>
 
-  <div class="row justify-content-center">
+  <div id="redirectBtn" class="row justify-content-center">
     <div class="col-3">
       <button style="margin-top: 50px;" class="btn btn-warning btn-block"><a style="color: white;" href="/">Return to
           Main Menu</a></button>
