--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -33,7 +33,7 @@
   </div>
 
 <br>
-<div class= "container">
+<div id="redirectBtn" class= "container">
   <div class="row justify-content-center">
   <div class="col-3">
     <button style="margin-top: 30px;" class="btn btn-warning btn-block"><a style="color: white;" href="/">Return to Main Menu</a></button>
