--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -28,7 +28,7 @@
     </div>
     <br>
   </div>
-  <div class="container">
+  <div id="redirectBtn" class="container">
   <div class="row justify-content-center">
     <div class="col-3">
       <button style="margin-top: 50px;" class="btn btn-warning btn-block"><a style="color: white;" href="/">Return to
