--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -13,9 +13,9 @@
   <div class="row">
     <div class="col col-md-6 col-md-offset-3">
 
-      <button id="Clothes" type="submit" class="btn btn-danger btn-block"> <a class="link" href="#">Clothes</a></button>
-      <button id="Jewelery" type="submit" class="btn btn-danger btn-block"> <a class="link" href="#">Jewelery</a></button>
-      <button id="Electronics" type="submit" class="btn btn-danger btn-block"> <a class="link" href="#">Electronics</a></button>
+      <button id="Clothing" type="submit" class="btn btn-danger btn-block"> <a class="link" href="#">Clothes</a></button>
+      <button id="Personal Care" type="submit" class="btn btn-danger btn-block"> <a class="link" href="#">Personal Care</a></button>
+      <button id="Sports & Outdoors" type="submit" class="btn btn-danger btn-block"> <a class="link" href="#">Sports & Outdoors</a></button>
       <button id="Toys" type="submit" class="btn btn-danger btn-block"> <a class="link" href="#">Toys</a></button>
 
     </div>
@@ -25,8 +25,8 @@
     <div class="col col-md-6 col-md-offset-3">
 
       <button id="Health" type="submit" class="btn btn-danger btn-block"> <a class="link" href="#">Health</a></button>
-      <button id="Entertainment" type="submit" class="btn btn-danger btn-block"> <a class="link" href="#">Entertainment</a></button>
-      <button id="Books" type="submit" class="btn btn-danger btn-block"> <a class="link" href="#">Books</a></button>
+      <button id="Pets" type="submit" class="btn btn-danger btn-block"> <a class="link" href="#">Pet</a></button>
+      <button id="Food" type="submit" class="btn btn-danger btn-block"> <a class="link" href="#">Food</a></button>
       <button id="Pick For Me" type="submit" class="btn btn-danger btn-block"> <a class="link" href="#">Pick For Me</a></button>
 
     </div>
