--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -37,8 +37,8 @@
   <div class="row justify-content-center">
   <div class="col-3">
     <button style="margin-top: 30px;" class="btn btn-warning btn-block"><a style="color: white;" href="/">Return to Main Menu</a></button>
-     <button style="margin-top: 20px;" class="btn btn-primary btn-block"><a style="color: white;" href="/login">Select a Person</a></button>
-          <button id="redirectBtn" class="btn btn-success btn-block"><a style="color: white;" href="/price">Select a Price</a></button>
+     <button style="margin-top: 10px;" class="btn btn-primary btn-block"><a style="color: white;" href="/login">Select a Person</a></button>
+     <button style="margin-top: 10px;" class="btn btn-success btn-block"><a style="color: white;" href="/price">Select a Price</a></button>     
   </div>
   </div> 
 </div>
