Changed csv file to deliver only the description

--- a/views/price.handlebars
+++ b/views/price.handlebars
@@ -14,7 +14,7 @@
       
     {{!-- <div class="col col-md-6 col-md-offset-3"> --}}
       <button id="20-30" type="submit" class="btn btn-success btn-block price"> <a class="link" href="#">$20 - $30</a></button>
-      <button id="Any" type="submit" class="btn btn-success btn-block price"> <a class="link" href="#">SURPRISE ME</a></button>
+      <button id="0-2000" type="submit" class="btn btn-success btn-block price"> <a class="link" href="#">SURPRISE ME</a></button>
 
       <br>
       </div>
